--- a/sparse_strips/vello_common/Cargo.toml
+++ b/sparse_strips/vello_common/Cargo.toml
@@ -12,7 +12,7 @@ repository.workspace = true
 publish = false
 
 [dependencies]
-vello_api = { workspace = true }
+vello_api = { workspace = true, default-features = true }
 # for pico_svg
 roxmltree = "0.20.0"
 
