--- a/sparse_strips/vello_bench/Cargo.toml
+++ b/sparse_strips/vello_bench/Cargo.toml
@@ -1,6 +1,5 @@
 [package]
 name = "vello_bench"
-version.workspace = true
 description = "Benchmarking harness for sparse strips."
 categories = ["rendering", "graphics"]
 keywords = ["2d", "vector-graphics"]
@@ -8,6 +7,7 @@ edition.workspace = true
 rust-version.workspace = true
 license.workspace = true
 repository.workspace = true
+publish = false
 
 [dependencies]
 vello_common = { workspace = true }
