--- a/sparse_strips/vello_hybrid/examples/webgl/Cargo.toml
+++ b/sparse_strips/vello_hybrid/examples/webgl/Cargo.toml
@@ -22,7 +22,7 @@ vello_common = { workspace = true }
 vello_hybrid = { workspace = true }
 wasm-bindgen = "0.2.100"
 wasm-bindgen-futures = "0.4.50"
-web-sys = { version = "0.3.77", features = ["Window", "HtmlCanvasElement"] }
+web-sys = { version = "0.3.77", features = ["Window", "HtmlCanvasElement", "CssStyleDeclaration", "WebGl2RenderingContext"] }
 wgpu = { workspace = true, features = ["webgl"] }
 
 [dev-dependencies]
