--- a/sparse_strips/android_view_app/Cargo.toml
+++ b/sparse_strips/android_view_app/Cargo.toml
@@ -32,3 +32,9 @@ tracing-subscriber = "0.3.19"
 profiling = { version = "1.0.16", features = ["profile-with-tracing"] }
 # Make events recorded to `tracing` visible in logcat
 tracing = { version = "0.1.38", features = ["log-always"] }
+
+[profile.release]
+panic = "abort"
+
+[profile.dev]
+panic = "abort"
