Don't expose Skrifa public API + use norm coords slice

--- a/sparse_strips/vello_common/Cargo.toml
+++ b/sparse_strips/vello_common/Cargo.toml
@@ -15,6 +15,7 @@ publish = false
 vello_api = { workspace = true, default-features = true }
 # for pico_svg
 roxmltree = "0.20.0"
+bytemuck = { workspace = true }
 skrifa = { workspace = true }
 
 [features]
