--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -67,6 +67,9 @@ tracing-subscriber = { version = "0.3.19", default-features = false, features = 
 ] }
 profiling = { version = "1.0.16", features = ["profile-with-tracing"] }
 
+# For caching
+jni = "0.21.1"
+
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.7"
 console_log = "1.0.0"
