--- a/examples/simple_sdl3/Cargo.toml
+++ b/examples/simple_sdl3/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "simple_sdl2"
+name = "simple_sdl3"
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
@@ -14,4 +14,4 @@ workspace = true
 # remove the path property of the following Vello dependency requirement.
 vello = { version = "0.4.0", path = "../../vello" }
 pollster = "0.4.0"
-sdl2 = { version = "0.37.0", features = ["raw-window-handle", "bundled"] }
+sdl3 = { version = "0.14.20", features = ["raw-window-handle", "build-from-source-static"] }
