--- a/sparse_strips/vello_hybrid/Cargo.toml
+++ b/sparse_strips/vello_hybrid/Cargo.toml
@@ -21,8 +21,7 @@ wgpu = { workspace = true }
 
 [dev-dependencies]
 winit = "0.30.9"
-skrifa = { workspace = true }
-parley = { version = "0.3.0", default-features = false, features = ["std"] }
+vello_hybrid_scenes = { workspace = true }
 pollster = { workspace = true }
 png = "0.17.14"
 roxmltree = "0.20.0"
