--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,9 @@ members = [
     "sparse_strips/vello_common",
     "sparse_strips/vello_cpu",
     "sparse_strips/vello_hybrid",
+    "sparse_strips/vello_hybrid/examples/scenes",
     "sparse_strips/vello_hybrid/examples/webgl",
+    "sparse_strips/vello_hybrid/examples/winit",
     "sparse_strips/vello_toy",
 ]
 
@@ -107,6 +109,7 @@ vello_api = { path = "sparse_strips/vello_api", default-features = false }
 vello_common = { path = "sparse_strips/vello_common" }
 vello_cpu = { path = "sparse_strips/vello_cpu" }
 vello_hybrid = { path = "sparse_strips/vello_hybrid" }
+vello_hybrid_scenes = { path = "sparse_strips/vello_hybrid/examples/scenes" }
 
 # NOTE: Make sure to keep this in sync with the version badge in README.md and vello/README.md
 wgpu = { version = "24.0.1" }
