--- a/sparse_strips/vello_bench/Cargo.toml
+++ b/sparse_strips/vello_bench/Cargo.toml
@@ -14,6 +14,7 @@ vello_common = { workspace = true }
 vello_cpu = { workspace = true }
 criterion = { workspace = true }
 rand = { workspace = true }
+smallvec = { workspace = true }
 usvg = { workspace = true }
 
 [[bench]]
