--- a/sparse_strips/vello_common/Cargo.toml
+++ b/sparse_strips/vello_common/Cargo.toml
@@ -17,6 +17,7 @@ vello_api = { workspace = true, default-features = true }
 roxmltree = "0.20.0"
 bytemuck = { workspace = true, features = [] }
 skrifa = { workspace = true }
+smallvec = { workspace = true }
 
 [features]
 simd = ["vello_api/simd"]
