--- a/image_filters/vello_filters_cpu/Cargo.toml
+++ b/image_filters/vello_filters_cpu/Cargo.toml
@@ -2,7 +2,7 @@
 name = "vello_filters_cpu"
 version.workspace = true
 categories = ["rendering", "graphics"]
-keywords = ["2d", ""]
+keywords = ["2d", "render", "filter", "blur"]
 edition.workspace = true
 rust-version.workspace = true
 license.workspace = true
