--- a/Cargo.toml
+++ b/Cargo.toml
@@ -134,6 +134,8 @@ criterion = { version = "0.5.1", default-features = false }
 rand = { version = "0.9.0", default-features = false, features = ["std_rng"] }
 usvg = { version = "0.45.0" }
 once_cell = "1.21.3"
+
+# Used for testing
 proc-macro2 = "1.0.93"
 syn = { version = "2.0.100", features = ["full", "extra-traits"] }
 quote = "1.0.38"
