--- a/sparse_strips/vello_api/Cargo.toml
+++ b/sparse_strips/vello_api/Cargo.toml
@@ -12,7 +12,7 @@ repository.workspace = true
 publish = false
 
 [dependencies]
-peniko = { workspace = true }
+peniko = { workspace = true, features = ["bytemuck"] }
 png = { workspace = true, optional = true }
 
 [features]
