--- a/sparse_strips/vello_sparse_tests/Cargo.toml
+++ b/sparse_strips/vello_sparse_tests/Cargo.toml
@@ -22,6 +22,7 @@ vello_hybrid = { workspace = true }
 wgpu = { workspace = true }
 pollster = { workspace = true }
 vello_dev_macros = { workspace = true }
+bytemuck = { workspace = true }
 oxipng = { workspace = true, features = ["freestanding", "parallel"] }
 image = { workspace = true, features = ["png"] }
 skrifa = { workspace = true }
