Add docs to Vello CPU

--- a/sparse_strips/vello_cpu/Cargo.toml
+++ b/sparse_strips/vello_cpu/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "vello_cpu"
+# When moving past 0.0.x, also update caveats in the README
 version.workspace = true
 description = "A CPU-based renderer for Vello, optimized for SIMD and multithreaded execution."
 categories = ["rendering", "graphics"]
